# stellarAid-contract

./: .gitignore  Cargo.toml  Makefile
campaign/: Cargo.toml
campaign/src/: errors.rs  lib.rs  release_milestone.rs  types.rs
config/: testnet_contracts.json
contracts/campaign/src/: lib.rs
contracts/donation/src/: lib.rs
contracts/platform_config/: Cargo.toml
contracts/platform_config/src/: errors.rs  lib.rs  storage.rs  types.rs
contracts/shared/src/: lib.rs  pause.rs  types.rs
contracts/withdrawal/src/: lib.rs
crates/tools/event-monitor/src/: main.rs
crates/tools/src/: main.rs
docs/: STORAGE.md  TOKEN_SETUP.md  contract-interface.md  deployment.md  formal-verification.md  mainnet-deployment.md  security-checklist.md  testnet-qa.md
factory/src/: lib.rs
scripts/: deploy.sh  verify-deployment.sh
sdk/: Cargo.toml
sdk/docs/wallet/: SEP7.md
sdk/hooks/: useWallet.ts
sdk/src/: errors.rs  lib.rs  retry.rs  server.rs  transaction_builder.rs
sdk/src/horizon/: client.rs
sdk/src/setup/: token_setup.rs
sdk/src/utils/: keypair.rs  mod.rs  xdr_parser.rs
sdk/state/: walletStore.ts
sdk/utils/: sep7.ts
sdk/utils/__tests__/: sep7.spec.ts
worker/: Cargo.toml
worker/src/: main.rs  webhooks.rs
worker/src/db/: donations_repo.rs
worker/src/models/: donation_status.rs  mod.rs
worker/src/services/: donation_verifier.rs  mod.rs
