[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }
stellar-xdr = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
